@@ -1,6 +1,9 @@
 package com.herokuapp.theinternet.base;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.openqa.selenium.WebDriver;
+import org.testng.ITestContext;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Optional;
@@ -10,13 +13,23 @@ public class BaseTest {
 	
 	// In this class are the methods used by ALL classes
 	
+	/*
+	  Add this in run configurations (Arguments > VM arguments) to solve log (netty) exceptions:
+	--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+	-Dio.netty.tryReflectionSetAccessible=true 
+	 */
+	
 	protected WebDriver driver;
+	protected Logger log;
 
 	@Parameters({ "browser" })
 	@BeforeMethod(alwaysRun = true)
-	public void setUp(@Optional("chrome") String browser) {
+	public void setUp(@Optional("chrome") String browser, ITestContext ctx) {
 		
-		BrowserDriverFactory factory = new BrowserDriverFactory(browser);
+		String testName = ctx.getCurrentXmlTest().getName();
+		log = LogManager.getLogger(testName);
+		
+		BrowserDriverFactory factory = new BrowserDriverFactory(browser, log);
 		driver = factory.createDriver();
 
 		driver.manage().window().maximize();
@@ -24,7 +37,7 @@ public class BaseTest {
 	
 	@AfterMethod(alwaysRun = true)
 	public void tearDown() {
-		System.out.println("Close driver");
+		log.info("Close driver");
 		// Close browser
 		driver.quit();
 	}
